programming/articles/EffectiveJava/pages/page_0163.txt
CHAPTER 5
GENERICS
142
for a Chooser<Number>. This would not compile with the original declaration, but
it does once you add the bounded wildcard type to the declaration.
Now let’s look at the union method from Item 30. Here is the declaration:
public static <E> Set<E> union(Set<E> s1, Set<E> s2)
Both parameters, s1 and s2, are E producers, so the PECS mnemonic tells us that
the declaration should be as follows:
public static <E> Set<E> union(Set<? extends E> s1,
Set<? extends E> s2)
Note that the return type is still Set<E>. Do not use bounded wildcard types as
return types. Rather than providing additional flexibility for your users, it would
force them to use wildcard types in client code. With the revised declaration, this
code will compile cleanly:
Set<Integer> integers = Set.of(1, 3, 5);
Set<Double>
doubles
= Set.of(2.0, 4.0, 6.0);
Set<Number>
numbers
= union(integers, doubles);
Properly used, wildcard types are nearly invisible to the users of a class. They
cause methods to accept the parameters they should accept and reject those they
should reject. If the user of a class has to think about wildcard types, there is
probably something wrong with its API.
Prior to Java 8, the type inference rules were not clever enough to handle the
previous code fragment, which requires the compiler to use the contextually spec-
ified return type (or target type) to infer the type of E. The target type of the union
invocation shown earlier is Set<Number>. If you try to compile the fragment in an
earlier version of Java (with an appropriate replacement for the Set.of factory),
you’ll get a long, convoluted error message like this:
Union.java:14: error: incompatible types
        Set<Number> numbers = union(integers, doubles);
                                   ^
  required: Set<Number>
  found:    Set<INT#1>
  where INT#1,INT#2 are intersection types:
    INT#1 extends Number,Comparable<? extends INT#2>
    INT#2 extends Number,Comparable<?>
Luckily there is a way to deal with this sort of error. If the compiler doesn’t
infer the correct type, you can always tell it what type to use with an explicit type